--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Train Widget</string>
+    <string name="app_name">Train Home</string>
+    <string name="stations_title">Select your home station</string>
+    <string name="home_station_selection">Click here to select your station</string>
+    <string name="home_station_selected">Your home station is:</string>
 </resources>
